feat(build): Redesign CI/CD pipeline for robustness and automation
This commit completely redesigns the build and release process to be more robust, maintainable, and automated.

The key improvements are:

- **Unified Build Script:** A new `build.py` script is now the single source of truth for all build and packaging logic. This eliminates the "works on my machine" problem by ensuring that local and CI builds are identical.

- **Automated Release Workflow:** The GitHub Actions workflow is now a multi-stage pipeline that:
    1.  Enforces code quality with a `test-and-lint` job.
    2.  Builds and packages the application for Linux, macOS, and Windows in parallel.
    3.  Automatically creates a GitHub Release with all platform-specific installers when a new version tag is pushed.

- **Reliable Secret Handling:** The `GOOGLE_CLIENT_CONFIG_JSON` secret is now handled safely and reliably across all platforms by passing it as an environment variable to the `build.py` script.

This new pipeline establishes a professional and automated workflow for testing, building, and releasing the application.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ src/config/security/google_client_config.json
 __pycache__
 Installers/prayer-player-ubuntu.zip
 Installers/prayer-player-windows.zip
+prayer-player-deb-staging/
