--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,254 +3,125 @@ name: Build and Release Prayer Player
 on:
   push:
     branches:
-    - main
+      - main
+    tags:
+      - 'v*.*.*'
   pull_request:
     branches:
-    - main
+      - main
 
 jobs:
+  test-and-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+
+      - name: Lint with ruff
+        run: ruff check .
+
+      - name: Run tests
+        run: pytest
+
   build-and-package:
+    needs: test-and-lint
     strategy:
       fail-fast: false
       matrix:
         include:
           - os: ubuntu-22.04
             python-version: '3.10'
-            asset_name: prayer-player-ubuntu
+            asset_name: prayer-player-ubuntu.deb
             asset_path: dist/*.deb
           - os: macos-latest
             python-version: '3.10'
-            asset_name: prayer-player-macos
+            asset_name: prayer-player-macos.dmg
             asset_path: dist/*.dmg
           - os: windows-latest
             python-version: '3.10'
-            asset_name: prayer-player-windows
+            asset_name: prayer-player-windows.exe
             asset_path: deployment/windows/Output/*.exe
 
     runs-on: ${{ matrix.os }}
 
     steps:
-    - name: Clean up previous build artifacts
-      if: runner.os == 'Linux' || runner.os == 'macOS'
-      run: |
-        rm -rf build/ dist/ *.spec
-        find . -type d -name "__pycache__" -exec rm -r {} +
-    - name: Clean up previous build artifacts (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        Remove-Item -Recurse -Force build/, dist/, *.spec -ErrorAction SilentlyContinue
-        Get-ChildItem -Path . -Recurse -Directory -ErrorAction SilentlyContinue | Where-Object {$_.Name -eq "__pycache__"} | Remove-Item -Recurse -Force
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    - name: Check out code
-      uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Install Linux GUI dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils libqt6gui6 libqt6widgets6
 
-    - name: Install Linux GUI dependencies
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils libqt6gui6 libqt6widgets6
+      - name: Build application
+        env:
+          GOOGLE_CLIENT_CONFIG_JSON: ${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}
+        run: python build.py --release
 
-    - name: Get pip cache dir
-      id: pip-cache
-      run: echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
-      shell: bash
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.asset_name }}
+          path: ${{ matrix.asset_path }}
 
-    - name: Cache Python dependencies
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+  create-release:
+    needs: build-and-package
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: dist
 
-    - name: Install dependencies (Windows/macOS)
-      if: runner.os != 'Linux'
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
 
-    - name: Install dependencies (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+      - name: Upload Release Asset (Ubuntu)
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/prayer-player-ubuntu.deb/prayer-player*.deb
+          asset_name: prayer-player-ubuntu.deb
+          asset_content_type: application/vnd.debian.binary-package
 
-    - name: Create Google Client Config from secret (macOS/Linux)
-      if: runner.os != 'Windows'
-      run: |
-        cat <<EOF > src/config/security/google_client_config.json
-        ${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}
-        EOF
-        # Remove any leading empty lines or whitespace
-        sed -i '/./,$!d' src/config/security/google_client_config.json
-        sed -i 's/^[[:space:]]*//' src/config/security/google_client_config.json
+      - name: Upload Release Asset (macOS)
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/prayer-player-macos.dmg/PrayerPlayer.dmg
+          asset_name: prayer-player-macos.dmg
+          asset_content_type: application/octet-stream
 
-    - name: Create Google Client Config from secret (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        $jsonContent = '${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}'
-        [System.IO.File]::WriteAllText("src/config/security/google_client_config.json", $jsonContent, [System.Text.Encoding]::UTF8)
-
-    - name: Build application executable
-      shell: bash
-      run: |
-        if [ "${{ runner.os }}" == "macOS" ]; then
-          pyinstaller --noconfirm PrayerPlayer-mac.spec
-        elif [ "${{ runner.os }}" == "Linux" ]; then
-          pyinstaller --noconfirm PrayerPlayer.spec
-        else
-          pyinstaller --noconfirm PrayerPlayer.spec
-        fi
-
-    - name: Set up token for dry run (macOS/Linux)
-      if: runner.os != 'Windows'
-      run: |
-        if [ "${{ runner.os }}" == "macOS" ]; then
-          mkdir -p "$HOME/Library/Application Support/PrayerPlayer"
-          echo "${{ secrets.TOKEN }}" > "$HOME/Library/Application Support/PrayerPlayer/token.json"
-        elif [ "${{ runner.os }}" == "Linux" ]; then
-          mkdir -p "$HOME/.local/share/PrayerPlayer"
-          echo "${{ secrets.TOKEN }}" > "$HOME/.local/share/PrayerPlayer/token.json"
-        fi
-
-    - name: Set up token for dry run (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        New-Item -ItemType Directory -Force -Path "$env:APPDATA\PrayerPlayer"
-        Set-Content -Path "$env:APPDATA\PrayerPlayer\token.json" -Value "${{ secrets.TOKEN }}"
-
-    - name: Make artifact executable
-      if: runner.os != 'Windows'
-      run: chmod -R +x dist/
-
-    - name: Test application startup (dry run)
-      shell: bash
-      run: |
-        echo "Listing contents of dist directory:"
-        ls -R dist
-        echo "Running startup test for ${{ runner.os }}"
-        echo "DEBUG: sys.platform in Python:"
-        python -c "import sys; print(sys.platform)"
-        if [ "${{ runner.os }}" == "Linux" ]; then
-          ./dist/PrayerPlayer --dry-run --country US --city "New York"
-        elif [ "${{ runner.os }}" == "macOS" ]; then
-          ./dist/PrayerPlayer.app/Contents/MacOS/PrayerPlayer --dry-run --country US --city "New York"
-        elif [ "${{ runner.os }}" == "Windows" ]; then
-          ./dist/PrayerPlayer.exe --dry-run --country US --city "New York"
-        fi
-
-    - name: Build and package Ubuntu .deb file
-      if: runner.os == 'Linux'
-      shell: bash
-      run: |
-          set -e
-          DEB_DIR="prayer-player-deb"
-          VERSION=$(python -c "from src.__version__ import __version__; print(__version__)")
-          
-          # Clean up previous build directory if it exists
-          rm -rf "${DEB_DIR}"
-
-          # Create package structure
-          mkdir -p "${DEB_DIR}/DEBIAN"
-          mkdir -p "${DEB_DIR}/usr/local/bin"
-          mkdir -p "${DEB_DIR}/usr/share/applications"
-          mkdir -p "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps"
-
-          # Create control file
-          cat <<EOF > "${DEB_DIR}/DEBIAN/control"
-          Package: prayer-player
-          Version: ${VERSION}
-          Architecture: amd64
-          Maintainer: Omar <dev@omar.com>
-          Description: Prayer times application that plays the Adhan.
-          Depends: libc6, libqt6gui6, libqt6widgets6, libxcb-xinerama0
-          EOF
-
-          # Create post-installation script
-          cat <<EOF > "${DEB_DIR}/DEBIAN/postinst"
-          #!/bin/sh
-          set -e
-          echo "Updating icon cache..."
-          gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor || true
-          echo "Updating desktop database..."
-          update-desktop-database -q || true
-          exit 0
-          EOF
-
-          # Create pre-removal script
-          cat <<EOF > "${DEB_DIR}/DEBIAN/prerm"
-          #!/bin/sh
-          set -e
-          if [ "$1" = "remove" ] || [ "$1" = "purge" ]; then
-              echo "Updating icon cache after removal..."
-              gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor || true
-              echo "Updating desktop database after removal..."
-              update-desktop-database -q || true
-          fi
-          exit 0
-          EOF
-
-          # Set permissions for control scripts
-          chmod 755 "${DEB_DIR}/DEBIAN/postinst"
-          chmod 755 "${DEB_DIR}/DEBIAN/prerm"
-
-          # Create desktop entry
-          cat <<EOF > "${DEB_DIR}/usr/share/applications/prayer-player.desktop"
-          [Desktop Entry]
-          Name=Prayer Player
-          Exec=/usr/local/bin/PrayerPlayer
-          Icon=prayer-player
-          Type=Application
-          Categories=Utility;
-          EOF
-
-          # Copy application files
-          cp dist/PrayerPlayer "${DEB_DIR}/usr/local/bin/"
-          cp src/assets/mosque.png "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps/prayer-player.png"
-
-          # Build the package
-          dpkg-deb --build "${DEB_DIR}"
-          mv "${DEB_DIR}.deb" "dist/prayer-player-${VERSION}-amd64.deb"
-          
-          echo "--- Final .deb artifact ---"
-          ls -l dist/
-
-    - name: Build and package macOS .dmg file
-      if: runner.os == 'macOS'
-      shell: bash
-      run: |
-        brew install create-dmg
-        create-dmg \
-          --volname "PrayerPlayer Installer" \
-          --window-pos 200 120 \
-          --window-size 800 400 \
-          --icon-size 100 \
-          --icon "PrayerPlayer.app" 200 190 \
-          --hide-extension "PrayerPlayer.app" \
-          --app-drop-link 600 185 \
-          "dist/PrayerPlayer.dmg" \
-          "dist/PrayerPlayer.app"
-
-    - name: Install Inno Setup for Windows installer
-      if: runner.os == 'Windows'
-      run: choco install innosetup --no-progress
-
-    - name: Compile Windows installer
-      if: runner.os == 'Windows'
-      run: iscc "deployment\windows\setup.iss"
-
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.asset_name }}
-        path: ${{ matrix.asset_path }}
+      - name: Upload Release Asset (Windows)
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/prayer-player-windows.exe/PrayerPlayerSetup.exe
+          asset_name: prayer-player-windows.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
