Fix: Correct Google client config secret name in build.yml
Updated the build.yml workflow to correctly reference the
GOOGLE_CLIENT_CONFIG secret, resolving the issue where the
environment variable was not being properly set during the build process.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Build application
         env:
-          GOOGLE_CLIENT_CONFIG_JSON: ${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}
+          GOOGLE_CLIENT_CONFIG_JSON: ${{ secrets.GOOGLE_CLIENT_CONFIG }}
         run: python build.py --release
 
       - name: Dry run built application (Linux)
