--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
           sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils libqt6gui6 libqt6widgets6
 
       - name: Debug Google Client Config
-        run: echo "GOOGLE_CLIENT_CONFIG_JSON content: ${{ secrets.GOOGLE_CLIENT_CONFIG }}"
+        run: echo 'GOOGLE_CLIENT_CONFIG_JSON content: ${{ secrets.GOOGLE_CLIENT_CONFIG }}'
 
       - name: Build application
         env:
