Feat: Specify 'dry_run' environment for build-and-package job
Added 'environment: dry_run' to the 'build-and-package' job in
build.yml to ensure access to secrets defined within the 'dry_run'
GitHub environment.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
 
   build-and-package:
     needs: test-and-lint
+    environment: dry_run
     strategy:
       fail-fast: false
       matrix:
