Fix: Explicitly quote GOOGLE_CLIENT_CONFIG secret in build.yml
Wrapped the GOOGLE_CLIENT_CONFIG secret in single quotes on line 76
of build.yml to prevent YAML syntax errors caused by special characters
within the secret's JSON content.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Build application
         env:
-          GOOGLE_CLIENT_CONFIG_JSON: ${{ secrets.GOOGLE_CLIENT_CONFIG }}
+          GOOGLE_CLIENT_CONFIG_JSON: '${{ secrets.GOOGLE_CLIENT_CONFIG }}'
         run: python build.py --release
 
       - name: Dry run built application (Linux)
