--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,15 +70,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils libqt6gui6 libqt6widgets6
 
-      - name: Debug Google Client Config
-        env:
-          DEBUG_GOOGLE_CLIENT_CONFIG: ${{ secrets.GOOGLE_CLIENT_CONFIG }}
-        run: echo "GOOGLE_CLIENT_CONFIG_JSON content: $DEBUG_GOOGLE_CLIENT_CONFIG"
-
       - name: Build application
-        env:
-          GOOGLE_CLIENT_CONFIG_JSON: '${{ secrets.GOOGLE_CLIENT_CONFIG }}'
-        run: python build.py --release
+        run: python build.py --release --google-client-config '${{ secrets.GOOGLE_CLIENT_CONFIG }}'
 
       - name: Dry run built application (Linux)
         if: runner.os == 'Linux'
