Fix: Windows executable not recognized in dry run\n\nModified build.yml to use the PowerShell call operator (&) when\nexecuting the Windows PrayerPlayer.exe in the dry run step.\nThis resolves the 'not recognized' error by ensuring the executable\nis properly invoked.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           # Run the application directly with dry run arguments
-          dist\PrayerPlayer.exe --dry-run --country "Germany" --city "Deggendorf" || true
+          & .\dist\PrayerPlayer.exe --dry-run --country "Germany" --city "Deggendorf" || true
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
