--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,5 @@ Installers/prayer-player-ubuntu.zip
 Installers/prayer-player-windows.zip
 prayer-player-deb-staging/
 erros.txt
-improvements.md
+improvement.md
 err.txt
