Fix: Adhan playback and focus steps display (#4)
* Fix: Adhan playback and focus steps display

- Modified scheduler.py to play both adhan.wav and duaa_after_adhan.wav sequentially.
- Corrected focus_steps_presenter.py to properly locate steps_content.txt in both development and PyInstaller bundled environments.
- Updated improvements.md with extended feature descriptions and new suggestions.

* Fix: Linting errors in focus_steps_presenter.py and Windows dry run path

- Moved  to the top of  to resolve E402 and F811 linting errors.
- Corrected the path for the Windows dry run executable in  from  to .

* 1 Fix: Correct Windows build paths in CI workflow
   2
   3 Updated .github/workflows/build.yml to use the correct paths for the
   4 Windows executable in both artifact uploads and dry-run commands.
   5 This resolves the "file not recognized" error during the Windows build
   6 dry run.

* Fix: Correct Windows build paths and audio file loading

- Updated .github/workflows/build.yml to use the correct paths for the
  Windows executable in both artifact uploads and dry-run commands.
  This resolves the "file not recognized" error during the Windows build
  dry run.
- Modified play() function in src/actions.py to correctly handle bundled
  audio files by extracting them to a temporary location if the application
  is running in a PyInstaller bundle, addressing the "Audio file not found" error.
- Updated test_actions.py to reflect the new logging format.

* Fix: Resolve ruff E402 errors in src/actions.py

Moved module-level imports to the top of the file to comply with Ruff E402 rule.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
           - os: windows-latest
             python-version: '3.10'
             asset_name: prayer-player-windows.exe
-            asset_path: deployment/windows/Output/*.exe
+            asset_path: dist/PrayerPlayer/*.exe
 
     runs-on: ${{ matrix.os }}
 
@@ -92,7 +92,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           # Run the application directly with dry run arguments
-          & .\dist\PrayerPlayer.exe --dry-run --country "Germany" --city "Deggendorf" || true
+          & .\dist\PrayerPlayer\PrayerPlayer.exe --dry-run --country "Germany" --city "Deggendorf" || true
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
