--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Installers/prayer-player-ubuntu.zip
 Installers/prayer-player-windows.zip
 prayer-player-deb-staging/
 erros.txt
+improvements.md
+err.txt
