--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
           - os: windows-latest
             python-version: '3.10'
             asset_name: prayer-player-windows.exe
-            asset_path: dist/PrayerPlayer/*.exe
+            asset_path: dist/PrayerPlayerSetup.exe
 
     runs-on: ${{ matrix.os }}
 
