--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-myenv
+errors.txt
+myenv                                                                          
 .pytest_cache
-src/__pycache__
+src/__pycache__  
+dist            
+build       
+*.egg-info       
+token.json       
+.env            
+myenv      
+config.json  
+.config.json     
+prayer-player-deb
+credential.json  
+src/config/security/google_client_config.json
 __pycache__
+Installers/prayer-player-ubuntu.zip
+Installers/prayer-player-windows.zip
+prayer-player-deb-staging/
+erros.txt
+improvement.md
+err.txt
+.venv
+err.log
