--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/prayer-player-ubuntu.deb/prayer-player*.deb
-          asset_name: prayer-player-ubuntu.deb
+          asset_name: PrayerPlayer-Ubuntu.deb
           asset_content_type: application/vnd.debian.binary-package
 
       - name: Upload Release Asset (macOS)
@@ -151,7 +151,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/prayer-player-macos.dmg/PrayerPlayer.dmg
-          asset_name: prayer-player-macos.dmg
+          asset_name: PrayerPlayer-macOS.dmg
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset (Windows)
@@ -159,5 +159,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/prayer-player-windows.exe/PrayerPlayerSetup.exe
-          asset_name: prayer-player-windows.exe
+          asset_name: PrayerPlayerSetup-Windows.exe
           asset_content_type: application/vnd.microsoft.portable-executable
