--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,6 +160,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/prayer-player-windows.exe/PrayerPlayerSetup.exe
+          asset_path: dist/prayer-player-windows.exe
           asset_name: PrayerPlayerSetup-Windows.exe
           asset_content_type: application/vnd.microsoft.portable-executable
