--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,8 +129,25 @@ jobs:
         with:
           path: dist
 
+      - name: Check if release already exists
+        id: check_release
+        run: |
+          set +e # Don't exit on error
+          RELEASE_EXISTS=$(curl -s -o /dev/null -w "%{\nhttp_code}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref }}" \
+            || echo "404") # Default to 404 if curl fails
+          echo "Release check HTTP code: $RELEASE_EXISTS"
+          if [ "$RELEASE_EXISTS" == "200" ]; then
+            echo "release_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "release_exists=false" >> $GITHUB_OUTPUT
+          fi
+        shell: bash
+
       - name: Create Release
         id: create_release
+        if: steps.check_release.outputs.release_exists == 'false'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
