--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,11 +43,11 @@ jobs:
           - os: ubuntu-22.04
             python-version: '3.10'
             asset_name: prayer-player-ubuntu
-            asset_path: dist/PrayerPlayerSetup.deb
+            asset_path: dist/PrayerPlayer.deb
           - os: macos-latest
             python-version: '3.10'
             asset_name: prayer-player-macos
-            asset_path: dist/PrayerPlayerSetup.dmg
+            asset_path: dist/PrayerPlayer.dmg
           - os: windows-latest
             python-version: '3.10'
             asset_name: prayer-player-windows
